k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
spec:
  selector:
    app: portfolio-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
